# transcript-timestamper

./: .gitignore  LICENSE  README.md  envrc_poetry.in  flake.nix  pyproject.toml  treefmt.toml
.github/actions/install-nix/: action.yml
.github/actions/poetry-install/: action.yml
.github/workflows/: test-main.yml  test-pull-requests.yml
nix-deps/: d2n_ruff.nix
scripts/: choose-envrc.py  direnv-poetry-lib.sh
transcript-timestamper/: README.md  envrc_poetry.in  extractPDFToText.py  matchTextAndTrans.py  package.nix  pyproject.toml  python-packages-extension.nix
transcript-timestamper-ui/: README.md  package.nix  pyproject.toml  python-packages-extension.nix
twly-meeting-fetchers/: README.md  crawler.py  pyproject.toml  python-packages-extension.nix  test.py
