[tool.poetry]
name = "transcript-timestamper-infra"
version = "0.1.0"
description = "Transcript Timestamper infrastructure and project configuration."
authors = [
    "Yi-Ting Yu <dududragoncat@gmail.com>",
    "Pin-Yen Lin <100340164+Lin-pinyen@users.noreply.github.com>",
    "Yueh-Shun Li <shamrocklee@posteo.net>",
]
license = "MIT"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.8"
ruff = "^0.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
