[tool.poetry]
name = "transcript-timestamper-ui"
version = "0.1.0"
description = "Add timestampts to a transcript based on the audio file"
authors = [
    "Yi-Ting Yu <dududragoncat@gmail.com>",
    "Pin-Yen Lin <100340164+Lin-pinyen@users.noreply.github.com>",
    "Yueh-Shun Li <shamrocklee@posteo.net>",
]
license = "MIT"
readme = "README.md"
packages = [
    { include = "qt", to = "transcript_timestamper_ui" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
PySide6 = "^6"
transcript-timestamper = {path = "../transcript-timestamper"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
